# fdcpp

./: CMakeLists.txt  LICENSE  README.md
src/easy/: buffered_socket.cpp  buffered_socket.hpp  fdpass.cpp  fdpass.hpp  mmap.cpp  mmap.hpp  tcp_socket.cpp  tcp_socket.hpp  timer.cpp  timer.hpp  udp_socket.cpp  udp_socket.hpp  unix_socket.cpp  unix_socket.hpp
src/fds/: epoll.cpp  epoll.hpp  eventfd.cpp  eventfd.hpp  file.cpp  file.hpp  file_descriptor.cpp  file_descriptor.hpp  inotify.cpp  inotify.hpp  memfd.cpp  memfd.hpp  signalfd.cpp  signalfd.hpp  socket.cpp  socket.hpp  timerfd.cpp  timerfd.hpp
src/fds/base/: descriptor.cpp  descriptor.hpp  file_descriptor.cpp  file_descriptor.hpp  idescriptor.cpp  idescriptor.hpp  ifile_descriptor.cpp  ifile_descriptor.hpp  iodescriptor.cpp  iodescriptor.hpp  iofile_descriptor.cpp  iofile_descriptor.hpp
src/util/: throw.cpp  throw.hpp
tests/: CMakeLists.txt  easy_buffered_socket_test.cpp  easy_fdpass_test.cpp  easy_mmap_test.cpp  easy_tcp_socket_test.cpp  easy_timer_test.cpp  easy_unix_socket_test.cpp  epoll_test.cpp  eventfd_test.cpp  file_test.cpp  memfd_test.cpp  signalfd_test.cpp  socket_test.cpp  timer_test.cpp  timerfd_test.cpp
tests/util/: macros.hpp
